k8s/cloudfleet/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lcyt
  labels:
    app.kubernetes.io/managed-by: kubectl
